# name: TestUpdate.test
  <class 'dict'> {
    'id': 'bf1b993c',
    'name': 'Technicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'handle': 'fcarpenter',
        'id': '3cbb22cc',
      },
      <class 'dict'> {
        'administrator': False,
        'handle': 'chelsea34',
        'id': 'da42dca3',
      },
      <class 'dict'> {
        'administrator': False,
        'handle': 'michelle34',
        'id': '09d01419',
      },
    ],
  }
---
# name: TestUpdate.test[users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'handle': 'bob',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'handle': 'qtaylor',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'handle': 'fcarpenter',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': 'da42dca3',
      'handle': 'chelsea34',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': '09d01419',
      'handle': 'michelle34',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
# name: TestUpdate.test_not_found[json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_create[201][json]
  <class 'dict'> {
    'id': 'fb085f7f',
    'name': 'test',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_create[201][location]
  'https://virtool.example.com/groups/fb085f7f'
---
# name: test_create[400][json]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Group already exists',
  }
---
# name: test_create[400][location]
  None
---
# name: test_find
  <class 'list'> [
    <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
    },
    <class 'dict'> {
      'id': 'fb085f7f',
      'name': 'hydrogeologists',
    },
  ]
---
# name: test_get[200]
  <class 'dict'> {
    'id': 'bf1b993c',
    'name': 'musicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
      <class 'dict'> {
        'administrator': False,
        'handle': 'qtaylor',
        'id': '7cf872dc',
      },
    ],
  }
---
# name: test_get[404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[204][json]
  None
---
# name: test_remove[204][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'da42dca3',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
# name: test_remove[404][json]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
# name: test_remove[404][users]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'test',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': '7cf872dc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': True,
        'remove_job': False,
        'upload_file': True,
      },
    },
    <class 'dict'> {
      '_id': '3cbb22cc',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': True,
        'remove_job': False,
        'upload_file': False,
      },
    },
    <class 'dict'> {
      '_id': 'da42dca3',
      'permissions': <class 'dict'> {
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': True,
      },
    },
  ]
---
